objects/UPC_ExternalContact__c.object
<CustomObject>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DGE</fullName>
                    <label>Managing Director</label>
                </value>
                <value>
                    <fullName>PDG</fullName>
                    <label>Chairman</label>
                </value>
                <value>
                    <fullName>DBR</fullName>
                    <label>Branch / Division Manager</label>
                </value>
                <value>
                    <fullName>DFI</fullName>
                    <label>Financial Director</label>
                </value>
                <value>
                    <fullName>CGE</fullName>
                    <label>Financial Controller</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>Chief Accountant</label>
                </value>
                <value>
                    <fullName>DAD</fullName>
                    <label>Administration Manager</label>
                </value>
                <value>
                    <fullName>RSK</fullName>
                    <label>Risk / Compliance Manager</label>
                </value>
                <value>
                    <fullName>PRZ</fullName>
                    <label>Process Manager</label>
                </value>
                <value>
                    <fullName>FLM</fullName>
                    <label>Fleet Manager</label>
                </value>
                <value>
                    <fullName>DSY</fullName>
                    <label>IT Strategy Manager</label>
                </value>
                <value>
                    <fullName>DIN</fullName>
                    <label>IT Manager</label>
                </value>
                <value>
                    <fullName>STV</fullName>
                    <label>Deputy IT Manager</label>
                </value>
                <value>
                    <fullName>INF</fullName>
                    <label>Project Manager</label>
                </value>
                <value>
                    <fullName>DEV</fullName>
                    <label>Software Development Manager</label>
                </value>
                <value>
                    <fullName>MIC</fullName>
                    <label>Micro Systems Manager</label>
                </value>
                <value>
                    <fullName>REX</fullName>
                    <label>Data Center Manager</label>
                </value>
                <value>
                    <fullName>NET</fullName>
                    <label>Network / Telecom Manager</label>
                </value>
                <value>
                    <fullName>WEB</fullName>
                    <label>Internet Responsible</label>
                </value>
                <value>
                    <fullName>SEC</fullName>
                    <label>Security Responsible</label>
                </value>
                <value>
                    <fullName>ERP</fullName>
                    <label>ERP Responsible</label>
                </value>
                <value>
                    <fullName>CRM</fullName>
                    <label>CRM Responsible</label>
                </value>
                <value>
                    <fullName>STO</fullName>
                    <label>Storage Responsible</label>
                </value>
                <value>
                    <fullName>PRT</fullName>
                    <label>Printing Responsible</label>
                </value>
                <value>
                    <fullName>PBX</fullName>
                    <label>PBX Responsible</label>
                </value>
                <value>
                    <fullName>IFR</fullName>
                    <label>IT Infrastructure Manager</label>
                </value>
                <value>
                    <fullName>DMA</fullName>
                    <label>Marketing Manager</label>
                </value>
                <value>
                    <fullName>DVE</fullName>
                    <label>Sales Manager</label>
                </value>
                <value>
                    <fullName>CAL</fullName>
                    <label>Call Center Manager</label>
                </value>
                <value>
                    <fullName>DPR</fullName>
                    <label>Production Manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_DPhone__c</fullName>
        <label>Direct phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_DataSource__c</fullName>
        <label>DataSource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profondia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ExternalCompanyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal company code</label>
        <referenceTo>UPC_ExternalCompanyData__c</referenceTo>
        <relationshipLabel>External Contacts</relationshipLabel>
        <relationshipName>External_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_ExternalErasureDate__c</fullName>
        <label>Date of erasure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_ExternalUpdateDate__c</fullName>
        <label>Date of update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Lastname__c</fullName>
        <label>Last name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Preferred_Language__c</fullName>
        <label>Language spoken by contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Title__c</fullName>
        <label>Title</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>External Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPC_FirstName__c</columns>
        <columns>UPC_Lastname__c</columns>
        <columns>UPC_DPhone__c</columns>
        <columns>UPC_Department__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal person number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>